--- a/kia/style/index.css
+++ b/kia/style/index.css
@@ -1,53 +1,81 @@
-body {height: 100vh;}
-header {
+html {max-width: 100%; }
+header {position: relative;}
+header .navigation {    
+    position: absolute;
+    z-index: 22;
     display: flex;
-    position: relative;
+    justify-content: space-between;
+    width: 100%;
+    padding: 20px 50px;
+    align-items: center;
 }
-header .left_menu {    
-    position: absolute;
-    z-index: 99;
-    left: 50px;
-    top: 40px;
+header .navigation h1 {margin-right: 200px;}
+header .navigation h1 a {}
+header .navigation h1 a img {display: block;}
+header .navigation nav {}
+header .navigation nav ul {display: flex;}
+header .navigation nav ul li {}
+header .navigation nav ul li a {
+    color: #fff; font-weight: 700;
+    margin-right: 50px;
 }
-header .left_menu a {
-    color: #fff;
-    margin-right: 40px;
-    font-size: 1.25rem;
-    font-family: 700;
-    
+/* 구매의 서브메뉴 */
+header .navigation nav ul li .sub {
+    position: absolute; 
+    left: 0; top: 80px; 
+    background-color: #fff; 
+    z-index: 10;
+    height: 300px;
+    padding: 25px;
+    width: 100%;
+    display: none;   /* 안보이게 숨김  */
 }
-header h1 {    
-    position: absolute;
-    z-index: 99;
-    left: 900px;
-    top: 30px;
+header .navigation nav ul li .sub li {}
+header .navigation nav ul li .sub li a {color: #000;}
+header .navigation nav ul li  .sub .sub_menu {display: block;}
+header .navigation nav ul li  .sub .sub_menu li {}
+header .navigation nav ul li  .sub .sub_menu li a {}
+
+header .navigation nav ul li  .sub .sub_btm {
+    position: absolute; bottom: 0; left: 0;
+    padding: 25px
 }
-header h1 a {}
-header h1 a img {}
-header .right_menu {
-    position: absolute;
-    z-index: 99;
-    right: 50px;
-    top: 50px;
+header .navigation nav ul li  .sub .sub_btm ul {}
+header .navigation nav ul li  .sub .sub_btm ul li {}
+header .navigation nav ul li  .sub .sub_btm ul li a {}
+header .navigation nav ul li  .sub .sub_btm ul li a img {}
+header .navigation .right_nav {
+    padding: 20px;
+    display: flex;
 }
-header .right_menu a {
-    color: #fff;
-    margin-left: 40px;
+header .navigation .right_nav ul {display: flex;}
+header .navigation .right_nav ul li {}
+header .navigation .right_nav ul li a {
+    color: #fff; font-weight: 700;
+    margin-right: 50px;
 }
+
 /* main bg  */
 main {text-align: center;}
-main .swiper-container {}
-main .swiper-container .swiper-wrapper {}
-main .swiper-container .swiper-wrapper {}
+main .swiper-container {overflow-x: hidden;}
+main .swiper-container .swiper-wrapper {
+    position: relative;
+}
 main .swiper-container .swiper-wrapper .swiper-slide {}
 main .swiper-container .swiper-wrapper .slide1 {}
-main .swiper-container .swiper-wrapper .slide1 img {width: 100%; height: 100%;}
+main .swiper-container .swiper-wrapper .slide1 img {
+    height: 100vh;
+    -o-object-fit: cover;
+    object-fit: cover;
+    width: 100%;
+}
 main .swiper-container .swiper-wrapper .title_text {
     color: #fff;
     position: absolute;
     z-index: 10;
-    bottom: 150px;
+    top: 600px;
     left: 50px;
+    text-align: left;
 }
 main .swiper-container .swiper-wrapper .title_text p {
     line-height: 1.5;
@@ -61,8 +89,8 @@ main .swiper-container .swiper-wrapper .title_text h2 {
 main .swiper-container .swiper-wrapper .btn {
     position: absolute;
     z-index: 10;
-    bottom: 50px;
     left: 50px;
+    top: 850px;
 }
 main .swiper-container .swiper-wrapper .btn a {}
 main .swiper-container .swiper-wrapper .btn >  a:first-child {
@@ -81,6 +109,7 @@ main .swiper-container .chat_message {
 }
 main .swiper-container .chat_message a {}
 main .swiper-container .chat_message a img {}
+main .swiper-container .swiper-pagination-bullet-active {background-color: #fff;}
 /* ===============content 2 */
 .best_kia {}
 .best_kia h2 {
@@ -90,23 +119,30 @@ main .swiper-container .chat_message a img {}
 }
 .best_kia .btn_menu {
     display: flex; justify-content: center;
-    font-size: 1.25rem; border-bottom: 1px solid #aaa; padding-bottom: 10px;
+    font-size: 1.25rem; border-bottom: 1px solid #aaa; 
+    padding-bottom: 10px;
+    margin-bottom: 70px;
 }
 .best_kia .btn_menu li {}
 .best_kia .btn_menu li a {
     margin-right: 60px;
 }
 .silder {
-    display: flex; 
+    margin: 0 auto;
+    max-width: 84pc;
+    padding-top: 0;
+    position: relative;
+    width: 100%;
+    display: flex;
     overflow: hidden;
-    margin: 50px 240px;
+    padding-bottom: 50px;
 }
 /* ===================== con1 */
 .silder .content {
     border: 1px solid #aaa; border-radius: 20px;
-    width: 450px; height: 900px;
+    width: 432px; height: 900px;
     padding: 40px 40px 210px;
-    margin-right: 30px;
+    margin-right: 24px;
 }
 .silder .content .content1 {
     text-align: left;
@@ -162,7 +198,7 @@ main .swiper-container .chat_message a img {}
 }
 .silder .content .content1 .btn a:last-child {background-color: #000; color: #fff;}
 /* =======================  con2 */
-.silder .content .content2 {}
+.silder .content .content2 {    text-align: left;}
 .silder .content .content2 .content_top {position: relative;}
 .silder .content .content2 .content_top h3 {
     font-size: 1.875rem;
@@ -215,7 +251,7 @@ main .swiper-container .chat_message a img {}
 }
 .silder .content .content2 .btn a:last-child {background-color: #000; color: #fff;}
 /* ====================== con3 */
-.silder .content .content3 {}
+.silder .content .content3 {    text-align: left;}
 .silder .content .content3 .content_top {position: relative;}
 .silder .content .content3 .content_top h3 {
     font-size: 1.875rem;
@@ -268,7 +304,7 @@ main .swiper-container .chat_message a img {}
 }
 .silder .content .content3 .btn a:last-child {background-color: #000; color: #fff;}
 /* ===================== con4 */
-.silder .content .content4 {}
+.silder .content .content4 {    text-align: left;}
 .silder .content .content4 .content_top {position: relative;}
 .silder .content .content4 .content_top h3 {
     font-size: 1.875rem;
@@ -324,26 +360,34 @@ main .swiper-container .chat_message a img {}
 /* details  */
 .details {
     display: flex;
-    padding: 100px 0;
+    justify-content: center;
 }
 .details .details1 {    
     background-color: #F8F8F8;
-    width: 380px; height: 250px;
+    width: 318px; height: 250px;
     text-align: left;
     padding: 24px;
     position: relative;
-    margin-left: 240px;
 }
-.details .details1 > a {
-
-}
+.details .details1 > a {}
 .details .details1 > a > p {}
-.details .details1 > a > p:first-child {width: 32px;}
-.details .details1 > a > p:last-child { 
-    text-align: right;
+.details .details1 > a > p img {width: 32px;}
+.details .details1 > a > span {
+    color: #F8F8F8;
     position: absolute;
     right: 32px;
     bottom: 32px;
+}
+.details .details1 > a > span::after {
+    background-image: url(../images/arrow_forward_ios.svg);
+    content: "";
+    display: block;
+    height: 24px;
+    position: absolute;
+    right: -24px;
+    top: 0;
+    width: 24px;
+    background-repeat: no-repeat;
 }
 /* details2 */
 .details {
@@ -352,45 +396,31 @@ main .swiper-container .chat_message a img {}
 }
 .details .details2 {    
     background-color: #F8F8F8;
-    width: 380px; height: 250px;
+    width: 318px; height: 250px;
     text-align: left;
     padding: 24px;
     position: relative;
     margin-left: 24px;
 }
-.details .details2 > a {
-
-}
+.details .details2 > a {}
 .details .details2 > a > p {}
-.details .details2 > a > p img:first-child {width: 32px;}
-.details .details2 > a > p:last-child { 
-    text-align: right;
+.details .details2 > a > p img {width: 32px;}
+.details .details2 > a > span {
+    color: #F8F8F8;
     position: absolute;
     right: 32px;
     bottom: 32px;
 }
-.details {
-    display: flex;
-    padding: 100px 0;
-}
-.details .details2 {    
-    background-color: #F8F8F8;
-    width: 380px; height: 250px;
-    text-align: left;
-    padding: 24px;
-    position: relative;
-    margin-left: 24px;
-}
-.details .details2 > a {
-
-}
-.details .details2 > a > p {}
-.details .details2 > a > p img:first-child {width: 32px;}
-.details .details2 > a > p:last-child { 
-    text-align: right;
+.details .details2 > a > span::after {
+    background-image: url(../images/arrow_forward_ios.png);
+    content: "";
+    display: block;
+    height: 24px;
     position: absolute;
-    right: 32px;
-    bottom: 32px;
+    right: -24px;
+    top: 0;
+    width: 24px;
+    background-repeat: no-repeat;
 }
 /* details3 */
 .details {
@@ -399,45 +429,30 @@ main .swiper-container .chat_message a img {}
 }
 .details .details3 {    
     background-color: #F8F8F8;
-    width: 380px; height: 250px;
+    width: 318px; height: 250px;
     text-align: left;
     padding: 24px;
     position: relative;
     margin-left: 24px;
 }
-.details .details3 > a {
-
-}
+.details .details3 > a {}
 .details .details3 > a > p {}
-.details .details3 > a > p img:first-child {width: 32px;}
-.details .details3 > a > p:last-child { 
-    text-align: right;
+.details .details3 > a > span {
+    color: #F8F8F8;
     position: absolute;
     right: 32px;
     bottom: 32px;
 }
-.details {
-    display: flex;
-    padding: 100px 0;
-}
-.details .details3 {    
-    background-color: #F8F8F8;
-    width: 380px; height: 250px;
-    text-align: left;
-    padding: 24px;
-    position: relative;
-    margin-left: 24px;
-}
-.details .details3 > a {
-
-}
-.details .details3 > a > p {}
-.details .details3 > a > p img:first-child {width: 32px;}
-.details .details3 > a > p:last-child { 
-    text-align: right;
+.details .details3 > a > span::after {
+    background-image: url(../images/arrow_forward_ios.png);
+    content: "";
+    display: block;
+    height: 24px;
     position: absolute;
-    right: 32px;
-    bottom: 32px;
+    right: -24px;
+    top: 0;
+    width: 24px;
+    background-repeat: no-repeat;
 }
 /* details4 */
 .details {
@@ -446,43 +461,190 @@ main .swiper-container .chat_message a img {}
 }
 .details .details4 {    
     background-color: #F8F8F8;
-    width: 380px; height: 250px;
+    width: 318px; height: 250px;
     text-align: left;
     padding: 24px;
     position: relative;
     margin-left: 24px;
 }
-.details .details4 > a {
-
-}
+.details .details4 > a {}
 .details .details4 > a > p {}
-.details .details4 > a > p img:first-child {width: 32px;}
-.details .details4 > a > p:last-child { 
-    text-align: right;
+.details .details4 > a > p img {width: 32px;}
+.details .details4 > a > span {
+    color: #F8F8F8;
     position: absolute;
     right: 32px;
     bottom: 32px;
 }
-.details {
+.details .details4 > a > span::after {
+    background-image: url(../images/arrow_forward_ios.png);
+    content: "";
+    display: block;
+    height: 24px;
+    position: absolute;
+    right: -24px;
+    top: 0;
+    width: 24px;
+    background-repeat: no-repeat;
+}
+/* ===========main_news */
+h2 {font-size: 3.15rem; font-weight: 700;}
+.main_news {
+    display: flex; justify-content: center;
+    padding-top: 50px;
+}
+.main_news .left_box {
+    background-color: #697278; color: #fff;
+    text-align: left;
+    width: 670px; height: 560px;
+    padding: 80px 64px 64px;
+}
+.main_news .left_box h3 {font-size: 20px;}
+.main_news .left_box h2 {
+    font-size: 24px;
+    padding: 70px 0 ;
+}
+.main_news .left_box > p {line-height: 1.5; padding-bottom: 150px;}
+.main_news .left_box > a {
+    background-color: #fff;
+    padding: 10px 20px;
+}
+.news p {}
+.news p img {width: 100%;}
+/* ============news */
+.news {}
+.news .sub_news {
+    display: flex; text-align: left;
+    justify-content: space-evenly;
+    margin-right: 100px;
+    padding-bottom: 100px;
+}
+.news .sub_news ul {padding-top: 100px;}
+.news .sub_news ul li {font-weight: 700; padding-bottom: 20px;}
+.news .sub_news ul li a {font-weight: 700;}
+/* ============event */
+.event {
+    background-color: #05141F; display: flex; 
+    color: #fff; padding: 4pc 4pc 40px;
+    text-align: left;
+}
+.event h3 {display: flex}
+.event h3 img {}
+.event .content_inner {
+    padding: 24px;
+    margin: 0 auto;
+    max-width: 112pc;
+    width: 100%;
+}
+.event .content_inner .left_content {
     display: flex;
-    padding: 100px 0;
+    margin-top: 50px;
 }
-.details .details4 {    
-    background-color: #F8F8F8;
-    width: 380px; height: 250px;
-    text-align: left;
-    padding: 24px;
-    position: relative;
-    margin-left: 24px;
+.event .content_inner .left_content > ul {}
+.event .content_inner .left_content > ul:nth-child(2) a {
+    margin-left: 150px; font-size: 0.75rem;
+    color: #aaa; 
 }
-.details .details4 > a {
-
-}
-.details .details4 > a > p {}
-.details .details4 > a > p img:first-child {width: 32px;}
-.details .details4 > a > p:last-child { 
-    text-align: right;
+.event .content_inner .left_content > ul > li {}
+.event .content_inner .left_content > ul > li > a {color: #fff; line-height: 2;}
+.event .content_inner .left_content .right_content {
+    width: 200px;
     position: absolute;
-    right: 32px;
-    bottom: 32px;
+    right: 160px;
 }
+.event .content_inner .left_content .right_content ul {
+    display: flex;
+}
+.event .content_inner .left_content .right_content ul li {}
+.event .content_inner .left_content .right_content ul li a {
+    color: #fff;
+    margin-right: 12px;
+}
+.event .content_inner .left_content .right_content ul li a:first-child {
+    display: flex;
+    align-items: center;
+}   
+.event .content_inner .left_content .right_content ul li:nth-child(1) a img{
+    width: 50px; margin-right: 10px;
+}  
+.event .content_inner .left_content .right_content ul li a img {}
+/* ===footer_content */
+.footer_content {
+    display: flex;
+    background-color: #05141F;
+    justify-content: space-between;
+    padding: 10px 90px;
+}
+.footer_content .footer_left {position: relative;}
+.footer_content .footer_left > p {}
+.footer_content .footer_left > p > a {color: #fff; margin-left: 30px;}
+.footer_content .footer_left > p > a::before {
+    background-image: url(../images/home.svg);
+    content: "";
+    display: block;
+    height: 24px;
+    position: absolute;
+    top: 0;
+    width: 24px;
+    background-repeat: no-repeat;
+}
+.footer_content .footer_right {
+    position: relative; 
+    display: flex;
+    align-items: center;
+}
+.footer_content .footer_right p {padding-right: 20px;}
+.footer_content .footer_right p > a {color: #fff; margin-left: 20px;}
+.footer_content .footer_right p > a::before {
+    background-image: url(../images/global_footer_kor.svg);
+    content: "";
+    display: block;
+    height: 24px;
+    position: absolute;
+    top: 10px;
+    width: 24px;
+    background-repeat: no-repeat;
+}
+.footer_content .footer_right #btn {
+    padding: 10px 20px; width: 220px;
+    color: #fff; background-color: #000;
+    border: 0px; text-align: left;
+}
+.footer_content .footer_right #btn::after {
+    background-image: url(../images/ic_arow_donw_g.svg);
+    content: "";
+    display: block;
+    height: 24px;
+    position: absolute;
+    top: 5px; right: 0;
+    width: 24px;
+    background-repeat: no-repeat;
+    padding-right: 20px;
+}
+/* =============== footer */
+.footer_menu {
+    background-color: #010E18; color: #aaa;
+    padding: 50px 84px; font-size: 0.75rem;
+}
+.footer_menu .top {
+    display: flex; 
+    justify-content: space-between;
+}
+.footer_menu .top p {margin-right: 700px;}
+.footer_menu .top a {color: #888; }
+.footer_menu .btm {}
+.footer_menu .btm ul {
+    display: flex;
+    align-items: center;
+    margin-top: 40px;
+}
+.footer_menu .btm ul li {
+    padding-right: 40px;
+    display: flex;
+}
+.footer_menu .btm ul li img {
+    width: 29px;
+    height: 19px;
+    margin-right: 10px;
+}
+.footer_menu .btm ul li span {line-height: 1.5;}
